<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.destinations.DestinationDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDetailImage"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailImage"
            tools:text="Nombre del Sitio" />

        <TextView
            android:id="@+id/tvDetailDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="@+id/tvDetailTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle"
            tools:text="Descripción detallada del lugar turístico." />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/tvDetailDescription"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailDescription" />

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/puntaje"
            app:layout_constraintStart_toStartOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/buttonRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enviarPuntaje"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@+id/ratingText"
            app:layout_constraintTop_toBottomOf="@+id/ratingText" />

        <TextView
            android:id="@+id/tvReviewsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/resena"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintStart_toStartOf="@+id/buttonRating"
            app:layout_constraintTop_toBottomOf="@+id/buttonRating" />

        <TextView
            android:id="@+id/tvReview1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/resena1"
            app:layout_constraintEnd_toEndOf="@+id/tvDetailDescription"
            app:layout_constraintStart_toStartOf="@+id/tvReviewsTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvReviewsTitle" />

        <TextView
            android:id="@+id/tvReview2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingBottom="16dp"
            android:text="@string/resena2"
            app:layout_constraintEnd_toEndOf="@+id/tvReview1"
            app:layout_constraintStart_toStartOf="@+id/tvReview1"
            app:layout_constraintTop_toBottomOf="@+id/tvReview1" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReview2" />

        <Button
            android:id="@+id/btnBackToDestinations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/backList"
            android:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>